# IronCalc

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  DynamicArrays.md  LICENSE-MIT  Makefile  README.md  TODO.md  codecov.yml  crates.js  docker-compose.yml  help.html  search-index.js  settings.html  src-files.js
base/: CALC.md  Cargo.toml  README.md  build.rs
base/examples/: formulas_and_errors.rs  hello_world.rs  test_completion.rs
base/src/: actions.rs  arithmetic.rs  builtin_styles.rs  calc_result.rs  cast.rs  cell.rs  cf_types.rs  colors.rs  conditional_formatting.rs  constants.rs  cut_paste.rs  diffs.rs  garbage_collector.rs  hasher.rs  implicit_intersection.rs  intern_pool.rs  lib.rs  mock_time.rs  model.rs  new_empty.rs  number_format.rs  styles.rs  task.rs  themes.rs  types.rs  units.rs  user_model.rs  utils.rs  workbook.rs  worksheet.rs
base/src/crdt/: formula.rs  ids.rs  mod.rs  order.rs  projection.rs  session.rs  sync.rs
base/src/expressions/: mod.rs  test.rs  test_tokens_serde.rs  token.rs  types.rs
base/src/finance/: provider.rs
base/src/formatter/: dates.rs  format.rs  lexer.rs  mod.rs  parser.rs
base/src/functions/: binary_search.rs  database.rs  date_and_time.rs  financial.rs  financial_bonds.rs  information.rs  logical.rs  lookup_and_reference.rs  macros.rs  math_util.rs  mathematical.rs  mathematical_sum.rs  mod.rs  model_util.rs  spill_functions.rs  statistical.rs  subtotal.rs  text.rs  text_util.rs  util.rs  xlookup.rs
base/src/language/: language.json  mod.rs
base/src/locale/: locales.json  mod.rs
base/src/test/: mod.rs  test_actions.rs  test_arabic_roman  test_arabic_roman.rs  test_arrays.rs  test_binary_search.rs  test_ceiling_floor.rs  test_cell.rs  test_cell_clear_contents.rs  test_cell_info_n_sheets  test_cell_info_n_sheets.rs  test_circular_references.rs  test_column_width.rs  test_combin_combina  test_combin_combina.rs  test_criteria.rs  test_currency.rs  test_cycle_reference.rs  test_database.rs  test_date_and_time.rs  test_datedif_leap_month_end.rs  test_datetime_format.rs  test_days360_month_end.rs  test_degrees_radians.rs  test_dynamic_arrays.rs  test_error_propagation.rs  test_escape_quotes.rs  test_even_odd.rs  test_exp_sign.rs  test_extend.rs  test_fact_factdouble.rs  test_floor.rs  test_fn_accrint.rs  test_fn_accrintm.rs  test_fn_average.rs  test_fn_averageifs.rs  test_fn_bond_functions.rs  test_fn_bycol_byrow.rs  test_fn_ceiling_floor.rs  test_fn_choose.rs  (+136 more)
base/src/tz/: browser_tz.rs  mod.rs  os_tz.rs
base/src/user_model/: autofill.rs  border.rs  border_utils.rs  clipboard.rs  common.rs  conditional_formatting.rs  event.rs  history.rs  mod.rs  named_cell_styles.rs  sequence_detector.rs  ui.rs  undo_redo.rs
bindings/nodejs/: Cargo.toml  README.md  index.d.ts  index.js  main.mjs  package-lock.json  package.json  pnpm-lock.yaml
bindings/nodejs/__test__/: index.spec.mjs
bindings/nodejs/src/: lib.rs  model.rs  user_model.rs
bindings/python/: .gitignore  Cargo.toml  LICENSE-Apache-2.0.md  LICENSE-MIT.md  README.md  build_docs.sh  pyproject.toml  run_examples.sh  run_tests.sh
bindings/python/docs/: api_reference.rst  conf.py  index.rst  installation.rst  objects.rst  raw_api_reference.rst  top_level_methods.rst  usage_examples.rst  user_api_reference.rst
bindings/python/src/: lib.rs  types.rs
bindings/python/tests/: test_create.py
bindings/wasm/: Cargo.toml  Makefile  README.md  README.pkg.md  fix_types.py  package.json  test.html  types.js  types.ts
bindings/wasm/.cargo/: config.toml
bindings/wasm/src/: lib.rs  xlsx.rs
bindings/wasm/tests/: test.mjs  test_cf.mjs  test_collab.mjs
collab-server/: Cargo.toml
collab-server/src/: lib.rs  main.rs  protocol.rs  room.rs  server.rs  storage.rs
collab-server/tests/: integration.rs
generate_locale/: Cargo.toml  README.md  locales.json  locales_list.json
generate_locale/src/: cldr_utils.rs  constants.rs  currency.rs  dates.rs  main.rs  numbers.rs  util.rs
tiron/: Cargo.toml  README.md
tiron/src/: main.rs
webapp/app.ironcalc.com/server/: .gitignore  Cargo.toml  README.md  Rocket.toml  init_db.sql  ironcalc.sqlite
xlsx/: Cargo.toml  README.md  build.rs  hello-calc.xlsx  hello-styles.xlsx  widths-and-heights.xlsx
xlsx/documentation/: README.md  sharedStrings.md  workbook.md  worksheets.md
xlsx/examples/: hello_calc.rs  hello_styles.rs  widths_and_heights.rs
xlsx/src/: compare.rs  error.rs  lib.rs  mock_time.rs  util.rs
xlsx/src/export/: _rels.rs  conditional_formatting.rs  doc_props.rs  dxfs_styles.rs  escape.rs  metadata.xml  mod.rs  shared_strings.rs  styles.rs  styles_util.rs  theme.rs  theme1.xml  workbook.rs  workbook_xml_rels.rs  worksheets.rs  xml_constants.rs
xlsx/src/import/: colors.rs  conditional_formatting.rs  metadata.rs  mod.rs  relationships.rs  shared_strings.rs  styles.rs  tables.rs  theme.rs  threaded_comments.rs  util.rs  workbook.rs  worksheets.rs
xlsx/tests/: DynamicArrays.xlsx  Merged_cells.xlsx  NoGrid.xlsx  basic_text.xlsx  crossword_ranges.xlsx  csv.rs  custom_theme_colors.xlsx  dynamic_arrays.xlsx  example.ic  example.json  example.xlsx  font_color_import.rs  font_name_import.rs  freeze.xlsx  generated_tests.rs  gridlines.rs  gridlines_issue_1269.xlsx  libreoffice_888_example.xlsx  merged_cells.xlsx  missing_r_on_row.xlsx  openpyxl_example.xlsx  optional_xf_id.xlsx  optional_xf_id_import.rs  shared_formula_volatile.xlsx  split.xlsx  test.rs  test_conditional_formatting.rs  test_import_randarray.rs  test_import_shared_formula_volatile.rs
xlsx/tests/calc_test_no_export/: tables.xlsx
xlsx/tests/calc_tests/: ACCRINTM.xlsx  ACCRINT_ACCRINTM.xlsx  ADDRESS.xlsx  AND_OR_XOR.xlsx  ARABIC_ROMAN.xlsx  BYCOL_BYROW.xlsx  CELL.xlsx  CHOOSE.xlsx  COMBIN_COMBINA.xlsx  COMBIN_COMBINA_detailed.xlsx  COMPLEXs.xlsx  CUMPRINC_CUMIPMT.xlsx  DATE.xlsx  DATEVALUE.xlsx  DATE_DAY_MONTH_YEAR.xlsx  DATE_TIME.xlsx  DAVERAGE.xlsx  DCOUNT_DCOUNTA_DGET_DPRODUCT.xlsx  DEGREES_RADIANS.xlsx  DMIN_DMAX_DAVERAGE_DSUM.xlsx  DOLLARs.xlsx  DROP_TAKE.xlsx  FV.xlsx  (+79 more)
(+1849 files in other folders)
