[package]
name = "ironcalc_base"
version = "0.2.0"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"
homepage = "https://www.ironcalc.com"
repository = "https://github.com/ironcalc/ironcalc/"
description = "The democratization of spreadsheets"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ryu = "1.0"
chrono = "0.4"
chrono-tz = "0.9"
regex = "1.0"
once_cell = "1.16.0"
bitcode = "0.6.0"

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.69" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"


