[package]
name = "ironcalc_base"
version = "0.5.0"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"
homepage = "https://www.ironcalc.com"
repository = "https://github.com/ironcalc/ironcalc/"
description = "Open source spreadsheet engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ryu = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
regex = { version = "1.0", optional = true}
regex-lite = { version = "0.1.6", optional = true}
once_cell = "1.16.0"
bitcode = "0.6.3"
csv = "1.3.0"

[features]
default = ["use_regex_full"]
use_regex_full = ["regex"]
use_regex_lite = ["regex-lite"]

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.69" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"


