[package]
name = "ironcalc_base"
version = "0.7.1"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"
homepage = "https://www.ironcalc.com"
repository = "https://github.com/ironcalc/ironcalc/"
description = "Open source spreadsheet engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ryu = "1.0"
chrono = "0.4"
bitcode = "0.6.8"
csv = "1.3.0"
statrs = { version = "0.18.0", default-features = false, features = [] }

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.69" }
wasm-bindgen = { version = "0.2" }
regex-lite = { version = "0.1.6" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
chrono-tz = "0.10"
regex = "1.0"


