[package]
name = "generate_locale"
version = "0.1.0"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2.22", features = ["derive"] }
