[package]
name = "ironcalc"
version = "0.7.1"
authors = ["Nicolás Hatcher <nicolas@theuniverse.today>"]
edition = "2021"
homepage = "https://www.ironcalc.com"
repository = "https://github.com/ironcalc/ironcalc/"
description = "The democratization of spreadsheets"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Compiles the engine with a mocked clock so tests can pin NOW()/TODAY()
# to the timestamp stored in a workbook's METADATA sheet (see `mock_time.rs`).
mock_time = ["ironcalc_base/mock_time"]

[dependencies]
zip = "0.6"
roxmltree = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Uses `../base` when used locally, and uses
# the inicated version from crates.io when published.
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
ironcalc_base = { path = "../base", version = "0.7" }
itertools = "0.12"
chrono = "0.4"
bitcode = "0.6.8"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["serde", "v4"] }
# Path-only self dependency (stripped when publishing): turns on the mocked
# clock for this crate's own tests while leaving normal builds untouched.
ironcalc = { path = ".", features = ["mock_time"] }

[lib]
name = "ironcalc"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
