[package]
name = "pyroncalc"
version = "0.5.6"
edition = "2021"


[lib]
name = "ironcalc"
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xlsx = { package= "ironcalc", path = "../../xlsx", version = "0.5.0" }
pyo3 = { version = "0.25", features = ["extension-module"] }
bitcode = "0.6.3"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
