[package]
name = "ironcalc_server"
version = "0.5.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rand = "0.8"
ironcalc = { path = "../../../xlsx/"}
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

